--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,19 @@
 /*  your css code here. If applicable */
+body {
+  margin: 20px;
+}
+.firstcolumn{
+Width: 200px;
+}
+.midcolumn{
+Width: 600px;
+}
+.lastcolumn{
+Width: 200px;
+}
+.middlecontant{
+text-align: center;
+}
+.leftcontent{
+text-align: left;
+}
